force-app/main/default/objects/Certification__c/fields/Date_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Date_Achieved__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Date Achieved</label>
    <required>true</required>
    <type>Date</type>
</CustomField>