force-app/main/default/objects/Certification__c/fields/Date_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Date_Delivered__c</fullName>
    <formula>Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Delivered</label>
    <type>Date</type>
</CustomField>