force-app/main/default/objects/Certification__c/fields/total_element__c.field-meta.xml
<CustomField>
    <fullName>total_element__c</fullName>
    <label>total element</label>
    <summaryForeignKey>Element__c.certification__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>